hide report icon for steps without features

--- a/map.html
+++ b/map.html
@@ -147,7 +147,7 @@
                       <button type="button"  class="img-btn" onclick="document.getElementById('map').hidden = !document.getElementById('map').hidden;"><img src="assets/list-task.svg" id="toggle-dir" alt="icon to bring up list of all steps for route"></button>
                       <p id="current-dir-building"></p>
                       <p id="current-dir-type"></p>
-                      <button type="button" class="img-btn" onclick="console.log('report function')"><img src="assets/exclamation-octagon-fill.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route"></button>
+                      <button type="button" id="current-report" class="img-btn" onclick="console.log('report function')"><img src="assets/exclamation-octagon-fill.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route"></button>
                     </div>
                     <div class="form-check dir-step" id="current-dir-check">
                       <input class="form-check-input" type="checkbox" value="" id="" onchange="checkFromCurrent(event)">
