--- a/map.html
+++ b/map.html
@@ -78,6 +78,7 @@
                             <option>Carlson</option>
                             <option>Computer Studies</option>
                             <option>Dewey</option>
+                            <option>Douglass</option>
                             <option>Goergen</option>
                             <option>Hoyt</option>
                             <option>Hutchinson</option>
@@ -89,6 +90,7 @@
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
                             <option>Wilmot</option>
+                            <option>Wilson Commons</option>
                           </select>
                             <select class="form-select" aria-label="Select destination floor" id="end-floor" name="end-floor">
                                 <option selected>--</option>
