add douglass and wilco

--- a/map.html
+++ b/map.html
@@ -55,6 +55,7 @@
                             <option>Carlson</option>
                             <option>Computer Studies</option>
                             <option>Dewey</option>
+                            <option>Douglass</option>
                             <option>Goergen</option>
                             <option>Hoyt</option>
                             <option>Hutchinson</option>
@@ -66,6 +67,7 @@
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
                             <option>Wilmot</option>
+                            <option>Wilson Commons</option>
                           </select>
                             <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
                                 <option selected>--</option>
